[project]
name = "graph-olap-e2e-tests"
version = "1.0.0"
description = "End-to-end tests for Graph OLAP platform"
requires-python = ">=3.12"
dependencies = [
    # Testing framework
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",  # Parallel test execution
    "pytest-order>=1.3.0",  # Test ordering

    # HTTP client for API testing
    "httpx>=0.28.1",

    # SDK for E2E tests (the actual thing being tested)
    "graph-olap-sdk",
    "graph-olap-schemas",

    # DataFrame support for query_df() tests
    "polars>=1.36.1",
    "pandas>=2.0.0",  # Required by test_critical_dependencies_installed

    # Jupyter notebook execution
    "papermill>=2.6.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
]

# NOTE: kubernetes/docker dependencies removed - infrastructure is managed by local-dev/

[project.optional-dependencies]
dev = [
    "ruff>=0.14.10",
]

[tool.uv.sources]
graph-olap-sdk = { workspace = true }
graph-olap-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This is a test-only package with no source code to ship
[tool.hatch.build.targets.wheel]
packages = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "e2e: End-to-end tests requiring Kubernetes cluster",
    "tutorials: Tutorial and reference notebook execution tests",
    "slow: Tests that take longer than 60 seconds",
]
# Default timeout for E2E tests (safety net — per-notebook timeouts in notebooks.yaml)
# Includes fixture setup (~120s with WORKERS=4) + notebook execution
timeout = 480
addopts = [
    "-v",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
